# sindarin-compiler

./: .gitattributes  .gitignore  .gitmodules  .mcp.json  BENCHMARKS.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Makefile  README.md  expected_output.c  sn.yaml  test_output.c  vcpkg.json
.claude-flow/: CAPABILITIES.md  config.yaml  daemon-state.json  daemon.pid
.claude-flow/hive-mind/: state.json
.claude-flow/metrics/: codebase-map.json  consolidation.json  learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
.github/workflows/: ci.yml  experiment.yml  release.yml
.swarm/: memory.db  schema.sql  state.json
benchmark/: .gitignore  RESULTS.md  SPEC.md  generate_report.sh  run_all.sh  run_benchmarks.sh
benchmark/c/: arrays.c  build.sh  fib.c  primes.c  strings.c
benchmark/csharp/: Fib.cs  Primes.cs  build.sh
benchmark/go/: arrays.go  build.sh  fib.go  primes.go  strings.go
benchmark/java/: Arrays.java  Fib.java  Primes.java  Strings.java  build.sh
benchmark/nodejs/: arrays.js  build.sh  fib.js  primes.js  strings.js
benchmark/python/: arrays.py  build.sh  fib.py  primes.py  strings.py
benchmark/rust/: arrays.rs  build.sh  fib.rs  primes.rs  strings.rs
benchmark/sindarin/: arrays.sn  benchmark.sn  build.sh  fib.sn  primes.sn  strings.sn
cmake/: CompilerBackend.cmake  Packaging.cmake  RuntimeObjects.cmake
docs/: arrays.md  building.md  interceptors.md  interop.md  lambdas.md  memory.md  namespaces.md  overview.md  quick-start.md  readme.md  strings.md  structs.md  threading.md
docs/archive/: gc-tasks.md
docs/drafts/: gc-tasks-v2.md  gc-tasks-v3.md  gc-tasks-v4.md  gc-tasks-v5.1.md  gc-tasks-v5.2.md  gc-tasks.md  gc.md  issues.md  urgent-fixes.md
docs/sdk/: crypto.md  date.md  env.md  json.md  math.md  process.md  random.md  readme.md  stdio.md  time.md  uuid.md  xml.md  yaml.md  zlib.md
etc/: sn.cfg  sn.darwin.cfg  sn.linux.cfg  sn.windows.cfg
experiments/malloc/: Makefile  README.md
packaging/archlinux/: PKGBUILD  README.md
packaging/homebrew/: README.md  sindarin.rb
packaging/winget/: README.md  SindarinSDK.Sindarin.installer.yaml  SindarinSDK.Sindarin.locale.en-US.yaml  SindarinSDK.Sindarin.yaml
samples/: main.c  main.sn
samples/lib/: arrays.sn  bytes.sn  closure.sn  conditionals.sn  date.sn  fileio.sn  functions.sn  lambda.sn  loops.sn  memory.sn  strings.sn  time.sn  types.c  types.sn
scripts/: install-prereqs.ps1  install-prereqs.sh  install.ps1  install.sh  run_tests.py  setup_deps.py
sdk/: crypto.sn  crypto.sn.c  date.sn  date.sn.c  env.sn  env.sn.c  json.sn  math.sn  process.sn  process.sn.c  random.sn  random.sn.c  stdio.sn  time.sn  uuid.sn  xml.sn  xml.sn.c  yaml.sn  yaml.sn.c  zlib.sn
sdk/core/: random.sn  uuid.sn.c  version.sn
sdk/encoding/: json.sn.c
sdk/io/: binaryfile.sn  binaryfile.sn.c  bytes.sn  bytes.sn.c  directory.sn  directory.sn.c  path.sn  path.sn.c  stdio.sn.c  textfile.sn  textfile.sn.c
sdk/net/: dtls.sn  dtls.sn.c  git.sn.c  quic.sn.c  ssh.sn  ssh.sn.c  tcp.sn  tcp.sn.c  tls.sn  tls.sn.c  udp.sn  udp.sn.c
sdk/os/: env.sn.c  process.sn
sdk/time/: time.sn.c
src/: Makefile  arena.c  arena.h  ast.c  ast.h  code_gen.c  code_gen.h  colors.h  compiler.c  compiler.h  debug.c  debug.h  diagnostic.c  diagnostic.h  error.h  file.c  file.h  formatter.c  formatter.h  gcc_backend.c  gcc_backend.h  gcc_backend_config.c  gcc_backend_config.h  gcc_backend_pkgconfig.c  gcc_backend_pkgconfig.h  lexer.c  lexer.h  main.c  optimizer.c  optimizer.h  package.c  package.h  parser.c  parser.h  parser_import.c  parser_import_util.c  parser_init.c  runtime.c  runtime.h  symbol_table.c  (+8 more)
src/ast/: ast_expr.c  ast_expr.h  ast_expr_advanced.c  ast_expr_basic.c  ast_expr_call.c  ast_expr_struct.c  ast_print.c  ast_print.h  ast_stmt.c  ast_stmt.h  ast_type.c  ast_type.h
src/cgen/: gen_model.c  gen_model.h  gen_model_chain_flatten.c  gen_model_expr.c  gen_model_func.c  gen_model_render.h  gen_model_render_common.c  gen_model_render_modular.c  gen_model_split.c  gen_model_split.h  gen_model_stmt.c  gen_model_struct.c  gen_model_type.c  ownership.c  ownership.h
src/code_gen/: code_gen_expr.c  code_gen_expr.h  code_gen_expr_access.c  code_gen_expr_array.c  code_gen_expr_binary.c  code_gen_expr_binary.h  code_gen_expr_call.c  code_gen_expr_call.h  code_gen_expr_call_array.c  code_gen_expr_call_array_byte.c  code_gen_expr_call_array_mutate.c  code_gen_expr_call_array_push.c  code_gen_expr_call_array_query.c  code_gen_expr_call_builtin.c  code_gen_expr_call_byte_array.c  code_gen_expr_call_char.c  code_gen_expr_call_closure.c  code_gen_expr_call_intercept.c  code_gen_expr_call_namespace.c  code_gen_expr_call_string.c  code_gen_expr_call_struct.c  code_gen_expr_core.c  code_gen_expr_incr.c  code_gen_expr_lambda.c  code_gen_expr_lambda.h  code_gen_expr_lambda_capture.c  code_gen_expr_match.c  code_gen_expr_match.h  code_gen_expr_member.c  code_gen_expr_misc.c  code_gen_expr_static.c  code_gen_expr_static.h  code_gen_expr_string.c  code_gen_expr_struct.c  code_gen_expr_thread.c  code_gen_expr_thread.h  code_gen_expr_thread_sync.c  code_gen_expr_thread_util.c  code_gen_expr_type.c  code_gen_method_emit.c  (+30 more)
src/gen_model/: gen_model.c  gen_model.h  gen_model_expr.c  gen_model_func.c  gen_model_render.c  gen_model_render.h  gen_model_render_common.c  gen_model_render_internal.h  gen_model_stmt.c  gen_model_struct.c  gen_model_type.c
src/lexer/: lexer_scan.c  lexer_scan.h  lexer_scan_keyword.c  lexer_scan_number.c  lexer_scan_pipe.c  lexer_scan_string.c  lexer_util.c  lexer_util.h
src/optimizer/: optimizer_string.c  optimizer_string.h  optimizer_tail_call.c  optimizer_tail_call.h  optimizer_util.c  optimizer_util.h  optimizer_util_dead.c  optimizer_util_literal.c  optimizer_util_vars.c
src/package/: package_git.c  package_install.c  package_lfs.c  package_lfs_batch.c  package_lfs_pointer.c  package_lfs_remote.c  package_lfs_ssh.c  package_script.c  package_sync.c  package_url.c  package_util.c  package_visit.c  package_yaml.c
src/parser/: parser_expr.c  parser_expr.h  (+20 more)
(+4086 files in other folders)
